project-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dwk-project-frontend-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dwk-project-frontend
    template:
        metadata:
            labels:
                app: dwk-project-frontend
        spec:
            containers:
                - name: dwk-project
                  image: PROJECT/FRONTEND_IMAGE
                  imagePullPolicy: Always
                  ports:
                    - containerPort: 80
                  livenessProbe:
                    httpGet:
                        path: /healthz
                        port: 80
                    initialDelaySeconds: 5
                    periodSeconds: 5
            restartPolicy: Always
