project-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dwk-project-frontend-svc
spec:
    type: NodePort 
    selector:
        app: dwk-project-frontend
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 80
