project-frontend/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-project-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: dwk-project-frontend-svc
            servicePort: 2345
        - path: /images
          backend:
            serviceName: dwk-project-images-svc
            servicePort: 2345
        - path: /todos
          backend:
            serviceName: dwk-project-todos-svc
            servicePort: 2345
